[gd_scene load_steps=28 format=3 uid="uid://bbecuaqfb2kyp"]

[ext_resource type="Script" path="res://objects/slime.gd" id="1_mvxgy"]
[ext_resource type="Texture2D" uid="uid://dvrli4pesltwh" path="res://sprites/MediumShadow.png" id="2_anp0p"]
[ext_resource type="Texture2D" uid="uid://do5nelxhjyjeb" path="res://sprites/slime2.png" id="2_d23y3"]
[ext_resource type="Texture2D" uid="uid://b0md76bdr4657" path="res://sprites/slime2_free.png" id="3_2gih3"]
[ext_resource type="Script" path="res://objects/SlimeHitbox.gd" id="3_bl8vk"]
[ext_resource type="Script" path="res://objects/Slime_Ani.gd" id="3_suc8i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l5y2c"]
radius = 9.0

[sub_resource type="AtlasTexture" id="AtlasTexture_fo3up"]
atlas = ExtResource("3_2gih3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_skv16"]
atlas = ExtResource("3_2gih3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbexj"]
atlas = ExtResource("3_2gih3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmm3v"]
atlas = ExtResource("3_2gih3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x81ov"]
atlas = ExtResource("3_2gih3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yr16p"]
atlas = ExtResource("3_2gih3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqgw0"]
atlas = ExtResource("3_2gih3")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6c7b"]
atlas = ExtResource("3_2gih3")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5raoe"]
atlas = ExtResource("3_2gih3")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkrgj"]
atlas = ExtResource("3_2gih3")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sseqs"]
atlas = ExtResource("2_d23y3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg336"]
atlas = ExtResource("2_d23y3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7erf"]
atlas = ExtResource("2_d23y3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2st28"]
atlas = ExtResource("2_d23y3")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqy6d"]
atlas = ExtResource("2_d23y3")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_feh6i"]
atlas = ExtResource("2_d23y3")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwu5j"]
atlas = ExtResource("2_d23y3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7ebn"]
atlas = ExtResource("2_d23y3")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_on2ry"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo3up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skv16")
}],
"loop": true,
"name": &"dam_take",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbexj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmm3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x81ov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yr16p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqgw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6c7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5raoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkrgj")
}],
"loop": true,
"name": &"die",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sseqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg336")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7erf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2st28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqy6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_feh6i")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwu5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7ebn")
}],
"loop": true,
"name": &"stage",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_jv7ps"]

[node name="Slime" type="CharacterBody2D"]
script = ExtResource("1_mvxgy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
shape = SubResource("CircleShape2D_l5y2c")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 8)
scale = Vector2(1, 0.6)
texture = ExtResource("2_anp0p")

[node name="Slime_Ani" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -9)
sprite_frames = SubResource("SpriteFrames_on2ry")
animation = &"die"
frame_progress = 0.956812
script = ExtResource("3_suc8i")

[node name="SlimeHitbox" type="Area2D" parent="."]
script = ExtResource("3_bl8vk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlimeHitbox"]
shape = SubResource("CircleShape2D_jv7ps")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="end_life" type="Timer" parent="."]
wait_time = 0.551

[connection signal="body_entered" from="SlimeHitbox" to="SlimeHitbox" method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="end_life" to="." method="_on_end_life_timeout"]
